--- a/index.html
+++ b/index.html
@@ -16,34 +16,29 @@
       <span>上次违反日期：<span id="lastDate"></span></span>
     </div>
     <div class="text-item">
-      <span>距今已经：<span id="howManyDays"></span></span>
+      <span>距今已经：<span id="howManyDays"></span>天</span>
     </div>
     <div class="text-item">
-      <span>最长纪录：<span id="longestRecord"></span></span>
+      <span>最长纪录：<span id="longestRecord"></span>天</span>
     </div>
   </div>
   
   <div class="calendar-container">
     <div class="calendar-controls-container">
       <button class="left base-btn" id="prev">←</button>
-      <p class="now" id="selectedDay">2023-11-11</p>
+      <p class="now" id="selectedDay"></p>
       <button class="right base-btn" id="next">→</button>
     </div>
     <div class="calendar-main" id="calendar">
       <div class="calendar-row">
+        <div class="calendar-item">周日</div>
         <div class="calendar-item">周一</div>
         <div class="calendar-item">周二</div>
         <div class="calendar-item">周三</div>
         <div class="calendar-item">周四</div>
         <div class="calendar-item">周五</div>
         <div class="calendar-item">周六</div>
-        <div class="calendar-item">周日</div>
       </div>
-      <div class="calendar-row"></div>
-      <div class="calendar-row"></div>
-      <div class="calendar-row"></div>
-      <div class="calendar-row"></div>
-      <div class="calendar-row"></div>
     </div>
   </div>
 
